# zestimate-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml
eval/: gold_labels.json
frontend/: index.html  vite.config.js
frontend/src/: App.css  App.jsx  addressValidation.js  index.css  main.jsx
src/zestimate_agent/: __init__.py  address_validation.py  apify_backend.py  cli.py  client.py  env.py  eval_harness.py  extractor.py  models.py  response_cache.py  server.py
tests/: test_address_validation.py  test_apify_enk9_actor.py  test_apify_helpers.py  test_apify_hgph_actor.py  test_apify_maxcopell_guard.py  test_cookie_loader.py  test_eval_harness.py  test_extractor.py
